Update issues link

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <footer layout horizontal>
       <div id="keyboard-button" class="keyboard footer-item"></div>
       <div>
-        <a href="https://github.com/dart-lang/dart-pad/issues"
+        <a href="https://github.com/perl6/6pad/issues"
             target="repo">Send feedback</a>
       </div>
       <div flex></div>
