Add remaining bits of dartpad css

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </button>
           </div>
         </div>
-        <div id="editpanel" flex layout vertical>
+        <div id="editpanel" flex layout vertical stylex="background-color: pink">
+        Here we are in the panel
         </div>
       </div>
 
@@ -89,7 +90,7 @@
         <div class="inner"></div>
       </div>
 
-      <div class="view" flex two layout vertical>
+      <div class="view" flex two layout vertical stylex="background-color: blue">
         <div class="view" flex two layout vertical>
           <div id="frame-overlay"></div>
           <div class="header" layout horizontal wrap>
