--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
         rel='stylesheet' type='text/css'>
 
     <!-- codemirror -->
-    <link href="packages/codemirror/css/codemirror.css" rel="stylesheet" media="screen">
+    <link href="lib/codemirror.css" rel="stylesheet" media="screen">
+    <link href="theme/zenburn.css" rel="stylesheet" media="screen">
+    <script src="lib/codemirror.js" defer></script>
+
+    <!--
     <link href="packages/codemirror/addon/lint/lint.css" rel="stylesheet" media="screen">
     <link href="packages/codemirror/addon/hint/show-hint.css" rel="stylesheet" media="screen">
-    <link href="packages/codemirror/theme/zenburn.css" rel="stylesheet" media="screen">
     <link href="packages/dart_pad/editing/editor_codemirror.css" rel="stylesheet" media="screen">
-    <script src="scripts/codemirror.js" defer></script>
+    -->
 
-    <script defer src="scripts/main.dart.js"></script>
+    <script defer src="main.js"></script>
 
-    <script src="scripts/ga.js" defer></script>
-    <script src="scripts/polymerpatch.js" defer></script>
   </head>
 
   <body fullbleed layout vertical>
@@ -82,7 +83,7 @@
           </div>
         </div>
         <div id="editpanel" flex layout vertical stylex="background-color: pink">
-        Here we are in the panel
+        <textarea id="editor"></textarea>
         </div>
       </div>
 
