Add syntax highlighting

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link href="lib/codemirror.css" rel="stylesheet" media="screen">
     <link href="theme/zenburn.css" rel="stylesheet" media="screen">
     <script src="lib/codemirror.js" defer></script>
+    <script src="lib/perl6-mode.js" defer></script>
 
     <!--
     <link href="packages/codemirror/addon/lint/lint.css" rel="stylesheet" media="screen">
