Add some addons so our editor is more like the dart pad one

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <!-- codemirror -->
     <link href="lib/codemirror.css" rel="stylesheet" media="screen">
     <link href="theme/zenburn.css" rel="stylesheet" media="screen">
+
     <script src="lib/codemirror.js" defer></script>
+    <script src="lib/edit/closebrackets.js" defer></script>
+    <script src="lib/edit/matchbrackets.js" defer></script>
     <script src="lib/perl6-mode.js" defer></script>
 
     <!--
