Remove dead malformed attribute

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="inner"></div>
       </div>
 
-      <div class="view" flex two layout vertical stylex="background-color: blue">
+      <div class="view" flex two layout vertical>
         <div class="view" flex two layout vertical>
           <div id="frame-overlay"></div>
           <div class="header" layout horizontal wrap>
