Renable accidently disabled running of code

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <script defer src="main.js"></script>
 
-    <!--<script defer src="gen/eval_code.js"></script>-->
+    <script defer src="gen/eval_code.js"></script>
 
   </head>
 
