Add a sample selection select

--- a/index.html
+++ b/index.html
@@ -62,16 +62,12 @@
         <button type="button" id="sharebutton" class="button">Share…</button>
       </div>
       <div>
-        <!--
         <select id="samples" required="false">
           <option value="0">Samples</option>
           <option disabled></option>
-          <option value="33706e19df021e52d98c">Hello World</option>
-          <option value="74e990d984faad26dea0">Fibonacci</option>
-          <option value="49bde0c1ed780decc902f3d4d06d8f0c">Sunflower</option>
-          <option value="479ecba5a56fd706b648">WebSockets</option>
+          <option value="b66f6f0eb46f296b8a285c45a152f18c">Quicksort</option>
+          <option value="b4b147048a70e333e61ec8c298096491">99 Bottles of Beer</option>
         </select>
-        -->
       </div>
     </header>
 
