[js] Update the evaluation backend, add a spaceship drawing example

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <select id="samples" required="false">
           <option value="0">Samples</option>
           <option disabled></option>
+          <option value="5a889cc9d6385853af2ff6a3fa165662">Draw a spaceship</option> https://perl6.github.io/6pad/#5a889cc9d6385853af2ff6a3fa165662
           <option value="b66f6f0eb46f296b8a285c45a152f18c">Quicksort</option>
           <option value="b4b147048a70e333e61ec8c298096491">99 Bottles of Beer</option>
         </select>
